Bug 338247 - --skip-startup-dialog command line option does not work in Kexi 2
Summary: --skip-startup-dialog command line option does not work in Kexi 2
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: General (other bugs)
Version First Reported In: 2.8.5
Platform: Other All
: NOR minor
Target Milestone: 2.9
Assignee: Kexi Bugs
URL:
Keywords: junior-jobs, regression
Depends on:
Blocks:
 
Reported: 2014-08-13 20:47 UTC by Jarosław Staniek
Modified: 2015-02-03 08:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.9.0 beta 3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2014-08-13 20:47:32 UTC
Kexi 2 has a new Welcome screen instead of a modal dialog. These changes broke the --skip-startup-dialog, which says:

Skip displaying startup dialog window.
If there is no project name specified to open,
an empty application window will appear.

It should work again.
Comment 1 Roman Shtemberko 2015-02-03 08:34:44 UTC
Git commit a1a90e90e79ac35560da422f27206105c909a89f by Roman Shtemberko.
Committed on 03/02/2015 at 08:24.
Pushed by rshtemberko into branch 'calligra/2.9'.

Delete --skip-startup-dialog related code

REVIEW:122389

M  +0    -4    kexi/core/kexicmdlineargs.h
M  +0    -2    kexi/main/startup/KexiStartup.cpp
M  +0    -6    kexi/main/startup/KexiStartupDialog.cpp
M  +0    -4    kexi/main/startup/KexiStartupDialog.h
M  +0    -1    kexi/tests/altertable/altertable.cpp

http://commits.kde.org/calligra/a1a90e90e79ac35560da422f27206105c909a89f
Comment 2 Jarosław Staniek 2015-02-03 08:40:54 UTC
Resolved by removing the option completely. It was not functioning for a long time and the nature of option suggest it's not used in scripts that call 'kexi' command for example.
Comment 3 Jarosław Staniek 2015-02-03 08:42:21 UTC
In the same step configuration option has been removed as well (from kexirc):

[Startup]
ShowStartupDialog=[bool]