Delete --skip-startup-dialog related code

REVIEW:122389
BUG:338247